--- a/Teams/Red Team/C2.md
+++ b/Teams/Red Team/C2.md
@@ -24,7 +24,7 @@ Staged payloads require a callback to the C2 server to download additional parts
 The simpler of the two, they contain the full C2 agent and will call back to the C2 server and begin beaconing immediately.
 
 # Payload Formats
-As we already know Windows PE files are not the only way to execute code on a system. Some C2 frameworks support payloads in various other formats for example:
+As we already know Windows PE files are not the only way to execute code on a system. Some C2 frameworks support [[Payload Delivery|payloads]] in various other formats for example:
 - PowerShell Scripts
 	- Which may contain C# code and may be compiled and executed with the Add-Type commandlet
 - HTA Files
