--- a/Teams/Red Team/C2.md
+++ b/Teams/Red Team/C2.md
@@ -61,7 +61,7 @@ This technique goes by several names by several different products "NGING Revers
 [[Sliver]] is an advanced, highly customizable multi-user CLI-Based C2 framework. Sliver is written in Go, which makes reverse engineering the C2 "implants" incredibly difficult. It supports various protocols for C2 communications like WireGuard, mTLS, HTTP(S), DNS, and much more. Additionally, it supports BOF files for additional functionality, DNS Canary Domains for masking C2 communications, automatic Let's Encrypt certificate generation for HTTPS beacons and much more
 
 # SSH Port-forwarding
-Now, we never want to expose the management interface publicly. We should always listen on a local interface and not on a pyblic-facing one, this of course complicates access for other operators, but the solution is an easy one. By creating a new user account and enabling [[SSH]] access on the server, they will be able to SSH port forward TCP/55553.
+Now, we never want to expose the management interface publicly. We should always listen on a local interface and not on a public-facing one, this of course complicates access for other operators, but the solution is an easy one. By creating a new user account and enabling [[SSH]] access on the server, they will be able to SSH port forward TCP/55553.
 To do this we first need to [enable the SSH port](https://www.geeksforgeeks.org/how-to-enable-and-start-ssh-on-kali-linux/) on our machine. Once this is done we can set up our port-forwarding.
 For this we could set up our Teamserver to listen on localhost on TCP/55553. So in order to access remotely, we can use
 ```shell
